--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -20,6 +20,8 @@ body, h1, h2, h3, h4, h5, h6 {
 	background: url(../img/intro-bg.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
+	width: 100%; 
+	height: 100%;
 }
 
 .intro-message {
