Update landing page layout and cta button colors

--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -124,7 +124,7 @@ a:focus,
 	height:52px;
 	outline: none;
 	position: relative;
-	background: #38A5DB;
+	background: #f15d22;
 	color: #fff;
 	box-shadow: none;
 	border-radius: 52px;
