--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -387,7 +387,7 @@ a:focus,
 
 .jumbotron.bg-image {
     position: relative;
-    background:url(../assets/desk.jpeg) 50% 50% no-repeat;
+    background:url(../assets/bukidnon.jpg) 50% 50% no-repeat;
     background-size: cover;
 }
 
