--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -1202,13 +1202,13 @@ a:focus,
 .social-links li a {
     display:block;
     color:#fff;
-    color:rgba(255,255,255,0.3);
-    font-size:18px;
-    width:40px;
-    height:40px;
-    line-height:40px;
+/*    color:rgba(255,255,255,0.3);*/
+    font-size:25px;
+    width:45px;
+    height:45px;
+    line-height:45px;
     text-align:center;
-    background:rgba(0,0,0,0.2);
+    background: #f15d22;
     border-radius:50%;
     -webkit-transition:all .3s ease-out;
     transition:all .3s ease-out;
